sfdx-source/wesli/main/default/objects/WESLI_Settings__c/WESLI_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>WESLI Settings</label>
</CustomObject>