sfdx-source/wesli/main/default/objects/WESLI_Settings__c/fields/Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URL__c</fullName>
    <label>Redirect URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>